Fix blue being too dark

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@
 }
 
 .board {
+  min-width: 920px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -214,6 +215,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.trade-container i {
+  margin-left: 5px;
 }
 
 .trade-panel {
